set up with yahoo finance instead

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -14,7 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connecting to the Alpaca's API"
+    "### Connecting to the Alpaca's API\n",
+    "Probably won't actually use, Alpaca is a lil weird and more in depth than we need rn"
    ]
   },
   {
@@ -23,12 +24,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from alpaca.data import StockHistoricalDataClient\n",
-    "from alpaca.data.requests import StockBarsRequest\n",
-    "from datetime import date\n",
+    "# from alpaca.data import StockHistoricalDataClient\n",
+    "# from alpaca.data.requests import StockBarsRequest\n",
+    "# from datetime import datetime\n",
     "\n",
-    "# keys required\n",
-    "stock_client = StockHistoricalDataClient(\"PKJ58RVPMSFATZXH370Q\",  \"iA9KOJMz48emGEDTAzOFdgcJW8xhwQC0WRhRk8VI\")"
+    "# # keys required\n",
+    "# stock_client = StockHistoricalDataClient(\"\",  \"\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Yahoo Finance Python API Wrapper\n",
+    "Instead of Alpaca, we'll use this to easily get historical stock data from Yahoo Finance"
    ]
   },
   {
@@ -37,11 +47,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# list the tickers of stocks we want data on and retrieve data (tesla, exxon, nextera energy)\n",
-    "symbols = [\"TSLA\", \"XOM\", \"NEE\"]\n",
-    "request_params = StockBarsRequest(symbol_or_symbols=symbols, start=date(2023, 1, 1), end=date(2023, 1, 31))\n",
+    "import yfinance as yf\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get stock data\n",
+    "exxon = yf.download('XOM','2022-01-01','2023-01-01')\n",
+    "nextera = yf.download(\"NEE\", '2022-01-01','2023-01-01')\n",
+    "tesla = yf.download(\"TSLA\", '2022-01-01','2023-01-01')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we can see what information is included in each dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get a look at data layout\n",
+    "nextera.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Looking for Trends & Insights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_theme(style=\"whitegrid\")\n",
     "\n",
-    "stock_client.get_stock_bars(request_params)"
+    "sns.lineplot(data=nextera, x=\"Date\", y=\"Open\")\n",
+    "plt.title(\"Nextera Opening Prices 2022\")\n",
+    "plt.ylabel(\"Opening Price ($)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(data=exxon, x=\"Date\", y=\"Open\")\n",
+    "plt.title(\"Exxon Opening Prices 2022\")\n",
+    "plt.ylabel(\"Opening Price ($)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(data=tesla, x=\"Date\", y=\"Open\")\n",
+    "plt.title(\"Tesla Opening Prices 2022\")\n",
+    "plt.ylabel(\"Opening Price ($)\")"
    ]
   }
  ],
