--- a/eda.ipynb
+++ b/eda.ipynb
@@ -132,22 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "PearsonRResult(statistic=-0.6526448140012728, pvalue=1.0944661544290887e-153)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The correlation between USO and ICLN over the past 5 years is -0.653 with a p-value of 0.0.\n"
+     ]
     }
    ],
    "source": [
-    "pearsonr(uso_5y[\"Open\"], icln_5y[\"Open\"])"
+    "cor_5y = pearsonr(uso_5y[\"Open\"], icln_5y[\"Open\"])\n",
+    "print(f\"The correlation between USO and ICLN over the past 5 years is {round(cor_5y[0], 3)} with a p-value of {round(cor_5y[1], 3)}.\")"
    ]
   },
   {
@@ -218,22 +216,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "PearsonRResult(statistic=0.0433016393803567, pvalue=0.49465545776594066)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The correlation between USO and ICLN over 2022 is 0.043 with a p-value of 0.495.\n"
+     ]
     }
    ],
    "source": [
-    "pearsonr(uso_1y[\"Open\"], icln_1y[\"Open\"])"
+    "cor_1y = pearsonr(uso_1y[\"Open\"], icln_1y[\"Open\"])\n",
+    "print(f\"The correlation between USO and ICLN over 2022 is {round(cor_1y[0], 3)} with a p-value of {round(cor_1y[1], 3)}.\")"
    ]
   },
   {
