--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Trends"
+    "## Price Trends"
    ]
   },
   {
@@ -131,6 +131,14 @@
    "source": [
     "cor_1y = pearsonr(uso_1y[\"Open\"], icln_1y[\"Open\"])\n",
     "print(f\"The correlation between USO and ICLN over 2022 is {round(cor_1y[0], 3)} with a p-value of {round(cor_1y[1], 3)}.\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Volume Trends"
    ]
   },
   {
